[package]
name = "delete-git-branches"
version = "0.1.0"
authors = ["Michael Dorst <m@mdorst.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
crossterm = "0.19.0"
git2 = "0.13.17"
thiserror = "1.0.24"
